--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -17,25 +17,27 @@ jobs:
         shell: bash
 
     env:
+      BACKEND_STORAGE_RESOURCE_GROUP: General
       BACKEND_STORAGE_ACCOUNT_NAME: pgoincterraform
       BACKEND_STORAGE_CONTAINER_NAME: tfstate
-      BACKEND_STORAGE_ACCESS_KEY : ${{ secrets.TERRAFORM_STORAGE_ACCESS_KEY }}
-      TERRAFORM_STATE_NAME: pgoinc.tfstate
+      BACKEND_STATE_NAME: pgoinc.tfstate
+      # BACKEND_STORAGE_ACCESS_KEY : ${{ secrets.TERRAFORM_STORAGE_ACCESS_KEY }}
 
     steps:
-    # Checkout the repository to the GitHub Actions runner
     - name: Checkout
       uses: actions/checkout@v3
 
-    # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
       with:
         terraform_version: "1.3.9"
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+    # - name: Terraform Init
+    #   run: terraform init -upgrade -input=false -backend-config=key="$TERRAFORM_STATE_NAME" -backend-config=storage_account_name="$BACKEND_STORAGE_ACCOUNT_NAME" -backend-config=container_name="$BACKEND_STORAGE_CONTAINER_NAME" -backend-config=access_key="$BACKEND_STORAGE_ACCESS_KEY"
+
     - name: Terraform Init
-      run: terraform init -upgrade -input=false -backend-config=key="$TERRAFORM_STATE_NAME" -backend-config=storage_account_name="$BACKEND_STORAGE_ACCOUNT_NAME" -backend-config=container_name="$BACKEND_STORAGE_CONTAINER_NAME" -backend-config=access_key="$BACKEND_STORAGE_ACCESS_KEY"
+      run: terraform init -upgrade -input=false -backend-config=key="$BACKEND_STATE_NAME" -backend-config=storage_account_name="$BACKEND_STORAGE_ACCOUNT_NAME" -backend-config=container_name="$BACKEND_STORAGE_CONTAINER_NAME" -backend-config=resource_group_name="$BACKEND_STORAGE_RESOURCE_GROUP" -backend-config=subscription_id="${{ secrets.AZURE_SUBSCRIPTION_ID }}" -backend-config=tenant_id="${{ secrets.AZURE_TENANT_ID }}" -backend-config=client_id="${{ secrets.SP_CLIENT_ID }}" -backend-config=client_secret="${{ secrets.SP_CLIENT_SECRET }}"
 
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
@@ -43,10 +45,10 @@ jobs:
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan -input=false
+      run: terraform plan -input=false -out pgoinc.tfplan
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
-    - name: Terraform Apply
-      if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
-      run: terraform apply -auto-approve -input=false
+    # - name: Terraform Apply
+    #   if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
+    #   run: terraform apply -auto-approve -input=false
