--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -38,6 +38,11 @@ jobs:
 
     - name: Terraform Init
       run: terraform init -upgrade -input=false -backend-config=key="$BACKEND_STATE_NAME" -backend-config=storage_account_name="$BACKEND_STORAGE_ACCOUNT_NAME" -backend-config=container_name="$BACKEND_STORAGE_CONTAINER_NAME" -backend-config=resource_group_name="$BACKEND_STORAGE_RESOURCE_GROUP" -backend-config=subscription_id="${{ secrets.AZURE_SUBSCRIPTION_ID }}" -backend-config=tenant_id="${{ secrets.AZURE_TENANT_ID }}" -backend-config=client_id="${{ secrets.SP_CLIENT_ID }}" -backend-config=client_secret="${{ secrets.SP_CLIENT_SECRET }}"
+      env:
+        BACKEND_STORAGE_RESOURCE_GROUP: ${{ env.BACKEND_STORAGE_RESOURCE_GROUP }}
+        BACKEND_STORAGE_ACCOUNT_NAME: ${{ env.BACKEND_STORAGE_ACCOUNT_NAME }}
+        BACKEND_STORAGE_CONTAINER_NAME: ${{ env.BACKEND_STORAGE_CONTAINER_NAME }}
+        BACKEND_STATE_NAME: ${{ env.BACKEND_STATE_NAME }}
 
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
