--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -32,6 +32,15 @@ jobs:
       with:
         terraform_version: "1.3.9"
 
+    - name: Login Azure
+      env:
+        AAD_SERVICE_PRINCIPAL_CLIENT_ID: ${{ secrets.SP_CLIENT_ID }}
+        AAD_SERVICE_PRINCIPAL_CLIENT_SECRET: ${{ secrets.SP_CLIENT_SECRET }}
+      run: |
+        az login --service-principal -u ${{ secrets.SP_CLIENT_ID }} -p ${{ secrets.SP_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
+        az account set -s ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        az account show
+
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     # - name: Terraform Init
     #   run: terraform init -upgrade -input=false -backend-config=key="$TERRAFORM_STATE_NAME" -backend-config=storage_account_name="$BACKEND_STORAGE_ACCOUNT_NAME" -backend-config=container_name="$BACKEND_STORAGE_CONTAINER_NAME" -backend-config=access_key="$BACKEND_STORAGE_ACCESS_KEY"
